# AiSRT

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  SUPPORT.md  activate_env.bat  agents.md  open_ui.bat  pyproject.toml  requirements-dev.txt  requirements-torch-cu130.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
aisrt/: __init__.py  cli.py  diagnostics.py  errors.py  gui.py  gui_assets.py  gui_i18n.py  gui_support.py  gui_theme.py  gui_widgets.py  gui_worker.py  local_asr.py  local_translate.py  postprocess.py  translate_cli.py  translate_worker.py  user_messages.py
docs/: README.md  engineering.md  release-checklist.md
packaging/: README.md  aisrt_portable.spec  pyinstaller_gui.py  release-notes-template.md
scripts/: build_portable.ps1
tests/: test_diagnostics.py  test_gui.py  test_gui_window.py  test_gui_worker.py  test_local_asr.py  test_local_translate.py  test_open_source_hygiene.py  test_postprocess.py  test_translate_worker.py  test_user_messages.py
