[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisrt"
version = "0.1.0"
description = "Local CLI and GUI for generating multilingual SRT subtitles with local ASR models."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AISRT Contributors" }]
license = { text = "MIT" }
keywords = ["asr", "subtitle", "srt", "pyqt", "speech-recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]
dependencies = ["qwen-asr==0.0.6", "PyQt6>=6.7"]

[project.scripts]
ai-sub = "aisrt.cli:main"
ai-sub-gui = "aisrt.gui:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["aisrt*"]

[tool.setuptools.package-data]
aisrt = ["assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
