[build-system]
requires = ["setuptools>=77,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "aisrt"
version = "0.1.3"
description = "Local CLI and GUI for generating and translating multilingual SRT subtitles with local ASR models."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "AISRT Contributors" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["asr", "subtitle", "srt", "translation", "pyqt", "speech-recognition", "video-to-srt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "qwen-asr==0.0.6",
    "PyQt6>=6.7,<7",
]

[project.scripts]
ai-sub = "aisrt.cli:main"
ai-sub-gui = "aisrt.gui:main"
ai-sub-translate = "aisrt.translate_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "build>=1.3,<2",
    "pyinstaller>=6.14,<7",
    "setuptools>=77,<82",
]

[tool.setuptools.packages.find]
include = ["aisrt*"]

[tool.setuptools.package-data]
aisrt = ["assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
